[project]
name = "diffusers-lanpaint"
version = "0.1.0"
description = "LanPaint implementation in diffusers w/ backported new model support"
readme = "README.md"
license = "GPT-3.0"
authors = [
    { name = "Chaser Huang", email = "huangkangjing@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "diffusers>=0.36.0",
    "torch>=2.10.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
